Fix getting user session ID with D-Bus "user bus" model

In case a PackageKit requesting process is not part of the user's login
session, we ask systemd-logind for the the user's "display" session
instead.

This fixes gnome-software "failed to set proxy" warnings.

https://bugs.freedesktop.org/show_bug.cgi?id=101281